Next release
============

Documentation
-------------

- Add a chapter titled "Request and Response" to the narrative
  documentation, content cribbed from the WebOb documentation.

- Call out predicate attributes of ZCML directive within "Views"
  chapter.

1.1a7 (2009-10-18)
==================

Features
--------

- More than one ``@bfg_view`` decorator may now be stacked on top of
  any number of others.  Each invocation of the decorator registers a
  single view configuration.  For instance, the following combination
  of decorators and a function will register two view configurations
  for the same view callable::

    from repoze.bfg.view import bfg_view

    @bfg_view(name='edit')
    @bfg_view(name='change')
    def edit(context, request):
        pass

  This makes it possible to associate more than one view configuration
  with a single callable without requiring any ZCML.

- The ``@bfg_view`` decorator can now be used against a class method::

    from webob import Response
    from repoze.bfg.view import bfg_view

    class MyView(object):
        def __init__(self, context, request):
            self.context = context
            self.request = request

        @bfg_view(name='hello')
        def amethod(self):
            return Response('hello from %s!' % self.context)

  When the bfg_view decorator is used against a class method, a view
  is registered for the *class* (it's a "class view" where the "attr"
  happens to be the name of the method it is attached to), so the
  class it's defined within must have a suitable constructor: one that
  accepts ``context, request`` or just ``request``.

Documentation
-------------

- Added ``Changing the Traverser`` and ``Changing How
  :mod:`repoze.bfg.url.model_url` Generates a URL`` to the "Hooks"
  narrative chapter of the docs.

Internal
--------

- Remove ``ez_setup.py`` and imports of it within ``setup.py``.  In
  the new world, and as per virtualenv setup instructions, people will